--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
   </parent>
   <groupId>org.xwiki.contrib</groupId>
   <artifactId>appwithinminutes-charts</artifactId>
-  <version>1.2.2</version>
+  <version>1.2.3-SNAPSHOT</version>
   <packaging>xar</packaging>
   <name>AppWithin Minutes Charts and Data</name>
   <description>Allows creating charts and data table for AppWithinMinutes applications</description>
@@ -60,7 +60,7 @@
     <connection>scm:git:git://github.com/xwiki-contrib/appwithinminutes-charts.git</connection>
     <developerConnection>scm:git:git@github.com:xwiki-contrib/appwithinminutes-charts.git</developerConnection>
     <url>https://github.com/xwiki-contrib/appwithinminutes-charts</url>
-    <tag>appwithinminutes-charts-1.2.2</tag>
+    <tag>HEAD</tag>
   </scm>
   <distributionManagement>
     <repository>
